Design: fixed firefox overflow, removed search from home screen, fixe… (#63)
* Design: fixed firefox overflow, removed search from home screen, fixed validator border

* Design: fix vis selector

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -22,14 +22,6 @@ body main {
   margin-left: 0.1rem;
 }
 
-table.dataTable .sorting:before, table.dataTable.table-sm .sorting_asc:before, table.dataTable.table-sm .sorting_desc:before {
-  right : .40rem !important;
-}
-
-table.dataTable thead .sorting:after, table.dataTable thead .sorting_asc:after, table.dataTable thead .sorting_desc:after, table.dataTable thead .sorting_asc_disabled:after, table.dataTable thead .sorting_desc_disabled:after {
-  right: .15rem !important;
-}
-
 
 .theme-switch input {
   display: none;
@@ -191,6 +183,10 @@ input:checked + .slider:before {
 }
 .table {
   margin-bottom: 0;
+  width: 100% !important;
+  line-height: 1.2;
+  font-size: 0.93rem;
+  white-space: nowrap !important;
 }
 
 .table td, .table th {
@@ -198,6 +194,9 @@ input:checked + .slider:before {
   vertical-align: top;
   border-top: 1px solid var(--border-color);
   border-bottom: none;
+}
+.table thead th::before, .table thead th::after {
+  font-weight: 400;
 }
 
 .table thead th {
@@ -278,7 +277,6 @@ input:checked + .slider:before {
 .search-container .twitter-typeahead input {
   width: 100% !important;
   transition: width 0.4s ease-in;
-  -webkit-appearance: searchfield;
 }
 
 nav .twitter-typeahead input, #search-input {
